[project]
name = "confitti"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "William Henney", email = "will@henney.org" }
]
dependencies = [
    "numpy>=1.26.4",
    "lmfit>=1.2.2",
    "scipy>=1.13.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/confitti"]
